// Vitest Snapshot v1

exports[`Index page > should match snapshot 1`] = `
<body>
  <div>
    <!--&lt;Meta&gt;-->
     
    <div
      class="flex flex-row gap-2"
    >
      <h2>
        Projects
      </h2>
       
      <a
        aria-label="Create project"
        href="/project/create"
      >
        <svg
          height="1.2em"
          viewBox="0 0 1408 1408"
          width="1.2em"
        >
          <path
            d="M1408 608v192q0 40-28 68t-68 28H896v416q0 40-28 68t-68 28H608q-40 0-68-28t-28-68V896H96q-40 0-68-28T0 800V608q0-40 28-68t68-28h416V96q0-40 28-68t68-28h192q40 0 68 28t28 68v416h416q40 0 68 28t28 68z"
            fill="currentColor"
          />
        </svg>
        <!--&lt;Plus&gt;-->
      </a>
      <!--&lt;IconLink&gt;-->
    </div>
     
    
    <div
      class="card card-shadow card-rounded card-border mt-4 s-CTyDWs24qi3Z"
    >
      <a
        class="p-4 w-48 truncate"
        data-testid="project-list-entry-1-title"
        href="https://google.com"
      >
        the cool project
      </a>
       
      <p
        class="p-4 flex-grow flex-shrink"
        data-testid="project-list-entry-1-description"
      >
        this is a project
      </p>
    </div>
    <!--&lt;Card&gt;-->
    <!--&lt;ProjectListEntry&gt;-->
    
    <div
      class="card card-shadow card-rounded card-border mt-4 s-CTyDWs24qi3Z"
    >
      <a
        class="p-4 w-48 truncate"
        data-testid="project-list-entry-0-title"
        href="https://youtube.com"
      >
        the other project
      </a>
       
      <p
        class="p-4 flex-grow flex-shrink"
        data-testid="project-list-entry-0-description"
      >
        this is another project
      </p>
    </div>
    <!--&lt;Card&gt;-->
    <!--&lt;ProjectListEntry&gt;-->
    
    
    <!--&lt;+page&gt;-->
  </div>
</body>
`;

exports[`Index page > should match snapshot 2`] = `
<body>
  <div>
    <!--&lt;Meta&gt;-->
     
    <div
      class="flex flex-row gap-2"
    >
      <h2>
        Projects
      </h2>
       
      <a
        aria-label="Create project"
        href="/project/create"
      >
        <svg
          height="1.2em"
          viewBox="0 0 1408 1408"
          width="1.2em"
        >
          <path
            d="M1408 608v192q0 40-28 68t-68 28H896v416q0 40-28 68t-68 28H608q-40 0-68-28t-28-68V896H96q-40 0-68-28T0 800V608q0-40 28-68t68-28h416V96q0-40 28-68t68-28h192q40 0 68 28t28 68v416h416q40 0 68 28t28 68z"
            fill="currentColor"
          />
        </svg>
        <!--&lt;Plus&gt;-->
      </a>
      <!--&lt;IconLink&gt;-->
    </div>
     
    <p>
      No projects available
    </p>
    
    <!--&lt;+page&gt;-->
  </div>
</body>
`;
